--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Identifica+</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos.css" />
   </head>
   <body>
 <nav class="navbar">
@@ -26,7 +26,7 @@
     <a style="text-align: left;" href="#" class="contact-btn"> Saiba Mais</a>
       </div>
     <div class="Imagem">
-     <img style="max-width: 100%;" src="Logo da campanha.png">
+     <img style="max-width: 90%;" src="Logo da campanha.png">
     </div>
   </header>
 
@@ -34,10 +34,10 @@
 <h2>símbolo é suas identificações</h2>
 <div class="Crachás">
 <div class="card">
-  <img src="medal.png">
+  <img src="card.png">
   <div class="card-content">
   <h3>Crachá Girassol🌻 </h3>
-  <p>Representa deficiências ocultas ou invisíveis — aquelas que não são perceptíveis à primeira vista, como autismo, epilepsia, doenças crônicas, TDAH, entre outras.</p>
+  <p>Representa deficiências ocultas ou invisíveis, aquelas que não são perceptíveis à primeira vista, como autismo, TDAH, entre outras.</p>
   </div>
    <div class="texto-oculto">
   <h3>Quem Usa os Crachás Girassol?</h3>
@@ -45,10 +45,10 @@
   </div>
   </div>
 <div class="card">
-  <img src="medal.png">
+  <img src="card.png">
   <div class="card-content">
   <h3> Crachá Quebra-Cabeça 🧩</h3>
-  <p>Símbolo clássico do autismo, representando a diversidade e a complexidade dentro do espectro.</p>
+  <p>Representa o autismo e indica que a pessoa pode ter formas diferentes de perceber o mundo, se comunicar ou interagir. </p>
 </div>
  <div class="texto-oculto">
   <h3>Quem Usa os Crachás Quebra-Cabeça?</h3>
@@ -56,7 +56,7 @@
   </div>
 </div>
   <div class="card">
-   <img src="medal.png">
+   <img src="card.png">
    <div class="card-content">
   <h3>Crachá do Infinito Colorido♾️</h3>
   <p>Representa a neurodiversidade uma visão que reconhece e valoriza diferenças neurológicas naturais, como autismo, TDAH, dislexia, entre outras</p>
@@ -68,4 +68,7 @@
 </div>
   </section>
 
-    
+  <footer>
+<h1>Idetifica+</h1>
+
+  </footer>
